--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^10.0.17",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "react": "^16.9.0",
@@ -11,6 +12,7 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "styled-system": "^5.1.2",
     "webpack-build": "^1.0.1"
   },
   "scripts": {
@@ -35,6 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "webpack": "^4.39.1",
     "webpack-cli": "^3.3.8"
   }
